<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal">

            <!-- Movie Advertisements -->
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/tr_description"
                android:scaleType="centerCrop"
                android:src="@drawable/spiderman" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/twd_description"
                android:scaleType="centerCrop"
                android:src="@drawable/twd" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/tr_description"
                android:scaleType="centerCrop"
                android:src="@drawable/tr" />

        </LinearLayout>
    </HorizontalScrollView>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="382dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:text="@string/main_logo"
        android:textColor="@color/white"
        android:textSize="31sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="359dp"
        android:layout_height="82dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/Slogan"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:backgroundTint="@color/red"
        android:text="@string/Button_text"
        android:textColor="@android:color/white"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slogan"
        app:layout_constraintVertical_bias="0.527" />



</androidx.constraintlayout.widget.ConstraintLayout>
